--- a/c03x_sorkin.html
+++ b/c03x_sorkin.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="/Images/favicon.ico">
+	<link rel="shortcut icon" href="../A09/Images/favicon.ico">
 	<h1><B>Andrew Ross Sorkin, author of <em>Too Big to Fail</em></B></h1>
 	<h4>November 16, 2010</h4>
 </head>
 <body>
-	<img src="/Images/sorkin_desk260.jpg" alt="Sorkin">
+	<img src="../A09/Images/sorkin_desk260.jpg" alt="Sorkin">
 	<p>New York Times columnist and author, Andrew Ross Sorkin, has been described as &quot;the most famous financial journalist of his generation.&quot; His book, <em>Too Big to Fail</em>, was the first behind-the-scenes account of the financial crisis that led to our current recession.</p>
 
 	<p>The Economist, The Financial Times, and Business Week all named <em>Too Big To Fail</em> one of the best books of the year. The book was published by Viking October 20, 2009. The book was adapted as a movie by HBO Films and premiered on HBO on May 23, 2011.</p>
